--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-packages = prebchemdb
+packages = prebchemdb, scripts
 python_requires = >=3.9
 install_requires =
     click
@@ -26,3 +26,5 @@ install_requires =
 include_package_data = True
 [options.entry_points]
 console_scripts =
+    ann2csv = scripts.annotation2csv:run
+    mol2db = scripts.add_molecule:cli
