--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
 name = prebchemdb
-version = 0.0.0
+version = 0.0.1
 author = Bruno Cuevas
 author_email = cuevaszuviri@wisc.edu
-description = Past, present and future of prebiotic chemistry
+description = Classes and functions to process PrebChemDB
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = 
@@ -23,8 +23,11 @@ install_requires =
     numpy
     matplotlib
     pydantic
+    neomodel
+    requests
+    duckdb
 include_package_data = True
 [options.entry_points]
 console_scripts =
-    ann2csv = scripts.annotation2csv:run
     mol2db = scripts.add_molecule:cli
+    prebchemdb-cli = scripts.query:cli
