--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,26 @@
+[project]
+name = "prebchemdb"
+version = "0.1.0"
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.12"
+dependencies = [
+    "prebchemdb",
+    "flask>=3.1.0",
+    "wtforms>=3.2.1",
+    "rdkit>=2024.9.6",
+    "requests>=2.32.3",
+    "duckdb>=1.2.2",
+    "neomodel>=5.4.5",
+    "pandas>=2.2.3",
+    "numpy>=2.2.4",
+    "click>=8.1.8",
+    "flask-flatpages>=0.8.3",
+]
+
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.uv.sources]
+prebchemdb = { workspace = true }
