--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,7 @@ install_requires =
     neomodel
     requests
     duckdb
+    flask
 include_package_data = True
 [options.entry_points]
 console_scripts =
