--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "numpy>=2.2.4",
     "click>=8.1.8",
     "flask-flatpages>=0.8.3",
+    "gunicorn>=23.0.0",
 ]
 
 [build-system]
