--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "click>=8.1.8",
     "flask-flatpages>=0.8.3",
     "gunicorn>=23.0.0",
+    "waitress>=3.0.2",
+    "mkdocs-material>=9.6.12",
 ]
 
 [build-system]
